--- a/src/App.scss
+++ b/src/App.scss
@@ -1,9 +1,9 @@
 @import 'styles/variables.scss';
 
 .app {
-  margin: 80px auto $base-margin auto;
+  margin: 180px auto $base-margin;
   padding: 0 2 * $base-padding 2 * $base-padding 2 * $base-padding;
 
-  width: 960px;
+  width: 1200px;
   background-color: $white;
 }
